bug fix: PAGE CUTOFF

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,18 +10,11 @@
     font-family: "Noto Sans", Arial, sans-serif;
 }
 
-
 body{
     color: white;
-    height: 100vh;
-    background-image: url('/src/walls/wall1.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     font-size: x-large;
     word-spacing: 2px;
     letter-spacing: 1px;
-    overflow: hidden;
 }
 
 .block-center{
@@ -29,34 +22,10 @@ body{
     margin-inline: auto;
 }
 
-.test{
-    font-size: medium;
-    background-color: rgb(0 0 0 / .6);
-    padding: 1rem;
-    text-align: left;
-    backdrop-filter: blur(5px);
-    margin: 1rem .3rem;
-    font-family: arial;
-    font-weight: 200;
-    transition: background-color .5s;
-    position: relative;
+.untouchable{
+    user-select: none;
+    pointer-events: none;
 }
-.test::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 2%;
-    background-color: dodgerblue;
-    transition: width .5s;
-    z-index: -1
-}
-.test:hover::before{
-    width: 100%;
-}
-
-
 
 
 /* custom scrollbar  */
